contscts commit homework-week-2

--- a/homework-submission/kelemu-week-2-homework/hyf-contacts/src/App.css
+++ b/homework-submission/kelemu-week-2-homework/hyf-contacts/src/App.css
@@ -1,22 +1,131 @@
-.App {
-  text-align: center;
+#root,
+.app {
+  height: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
   flex-direction: column;
+}
+.header {
+  background: #323142;
+  justify-content: space-between;
+  padding: 0 15px;
+}
+.header,
+.header__branding {
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #09d3ac;
+.header__logo {
+  color: #fff;
+  margin-right: 15px;
+  width: 35px;
+  height: 35px;
 }
+.header__title {
+  font-size: 22px;
+  font-weight: 700;
+}
+.main {
+  flex: 1 1;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+}
+.clist {
+  background: #1d1d25;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 100%;
+}
+.clist__search {
+  background: #262537;
+  height: 42px;
+  margin: 15px 15px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 10px;
+}
+.clist__searchIcon {
+  font-size: 22px;
+  margin-right: 10px;
+}
+.clist__searchInput {
+  font: inherit;
+  background: none;
+  border: none;
+  outline: none;
+  color: inherit;
+  flex: 1 1;
+}
+.clist__contacts {
+  overflow-y: auto;
+  flex: 1 1;
+  height: 100%;
+  padding: 15px 0;
+}
+.clist__contact {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+  padding: 10px 15px;
+}
+.clist__contact.active {
+  background: #535283;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+}
+.clist__icon {
+  border-radius: 100%;
+  width: 36px;
+  height: 36px;
+  overflow: hidden;
+  margin-right: 10px;
+}
+.clist__firstName {
+  margin-right: 0.3em;
+}
+.clist__lastName {
+  font-weight: 700;
+}
+.details__large {
+  margin: 40px 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.details__icon {
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  margin-right: 30px;
+}
+.details__name {
+  font-size: 48px;
+}
+.details__firstName {
+  margin-right: 0.3em;
+}
+.details__lastName {
+  font-weight: 700;
+}
+.details__info {
+  margin: 30px 12px;
+}
+.details__row {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 0;
+}
+.details__label {
+  text-transform: uppercase;
+  color: #7a7a7a;
+  width: 150px;
+  text-align: right;
+  margin-right: 20px;
+}
+/*# sourceMappingURL=main.7a5b9cab.chunk.css.map */
